Fix appbar overlapping slider

--- a/site/styles/components/_appbar.scss
+++ b/site/styles/components/_appbar.scss
@@ -12,15 +12,22 @@ body {
 
 .app-bar {
   display: block;
-  width: 100%;
+  left: 0;
+  overflow: hidden;
   position: fixed;
   top: 0;
-  left: 0;
+  width: 100%;
   z-index: 2;
+  height: $navbar-height;
   @include container();
 
   @include media(desktop) {
+    height: $navbar-height-desktop;
     position: relative;
+  }
+
+  &.open {
+    height: auto;
   }
 }
 
@@ -33,7 +40,6 @@ body {
   display: -ms-flexbox;
   display: -webkit-flex;
   display: flex;
-  height: $navbar-height;
   margin: 0 auto;
   position: relative;
   width: 100%;
@@ -43,7 +49,6 @@ body {
     border-bottom: none;
     display: block;
     float: left;
-    height: $navbar-height-desktop;
     width: 50%;
   }
 }
